--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="AIzaSyBhVDi0Y_5ksZvH4SNj87tB0KU6ARsl2eM" />
 
         <activity
             android:name=".MostrarMapa"
